--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,13 +1,13 @@
-- title: Home
-  href: index.html
+#- title: Home
+#  href: index.html
 
-- title: About
-  href: about.html
+#- title: About
+#  href: about.html
 
-- title: Posts
-  href: list/posts.html
+#- title: Posts
+#  href: list/posts.html
 
-- title: Documentation
-  href: list/projects.html
+#- title: Documentation
+#  href: list/projects.html
 
 
